add sign in and sigfn out and add pet with authentication adn next auth

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
+
+AUTH_SECRET="hICV5zA/CJ5r6TNNondJWGOExqN8WjHOJC/Tnbj/Yy0="
